--- a/blastdock/templates/wordpress.yml
+++ b/blastdock/templates/wordpress.yml
@@ -1,22 +1,53 @@
 template_info:
-  description: "WordPress with MySQL database"
-  version: "1.0"
+  description: "WordPress with MySQL database and Traefik integration"
+  version: "2.0"
   services:
     - wordpress
     - mysql
+  traefik_compatible: true
+  default_port: 80
+  health_check_path: "/"
+
+traefik_config:
+  service_port: 80
+  middlewares:
+    - name: wordpress-headers
+      config:
+        headers:
+          customRequestHeaders:
+            X-Forwarded-Proto: "https"
+            X-Forwarded-For: "{{ .RemoteAddr }}"
+          customResponseHeaders:
+            X-Frame-Options: "SAMEORIGIN"
+            X-Content-Type-Options: "nosniff"
+  routing_priority: 1
 
 fields:
   domain:
     type: domain
-    description: "Domain name (optional)"
+    description: "Custom domain (optional)"
     default: ""
+    required: false
+  
+  subdomain:
+    type: string
+    description: "Subdomain prefix"
+    default: "{{ project_name }}"
+    validation: "^[a-z0-9-]+$"
+    required: false
+  
+  ssl_enabled:
+    type: boolean
+    description: "Enable SSL/TLS certificates"
+    default: true
     required: false
   
   wordpress_port:
     type: port
-    description: "WordPress port"
+    description: "WordPress port (only used without Traefik)"
     default: "8080"
-    required: true
+    required: false
+    conditional: "not traefik_enabled"
   
   mysql_root_password:
     type: password
@@ -50,8 +81,10 @@ compose:
       image: wordpress:latest
       container_name: "{{ project_name }}_wordpress"
       restart: unless-stopped
+      {% if not traefik.enabled %}
       ports:
         - "{{ wordpress_port }}:80"
+      {% endif %}
       environment:
         WORDPRESS_DB_HOST: mysql
         WORDPRESS_DB_NAME: "{{ mysql_database }}"
@@ -63,6 +96,34 @@ compose:
         - mysql
       networks:
         - wordpress_network
+        {% if traefik.enabled %}
+        - blastdock-network
+        {% endif %}
+      {% if traefik.enabled %}
+      labels:
+        - "traefik.enable=true"
+        - "traefik.docker.network=blastdock-network"
+        {% if traefik.domain %}
+        - "traefik.http.routers.{{ project_name }}-wordpress.rule=Host(`{{ traefik.domain }}`)"
+        {% elif traefik.subdomain %}
+        - "traefik.http.routers.{{ project_name }}-wordpress.rule=Host(`{{ traefik.subdomain }}.{{ default_domain }}`)"
+        {% endif %}
+        - "traefik.http.routers.{{ project_name }}-wordpress.entrypoints=websecure"
+        - "traefik.http.services.{{ project_name }}-wordpress.loadbalancer.server.port=80"
+        {% if traefik.ssl_enabled %}
+        - "traefik.http.routers.{{ project_name }}-wordpress.tls=true"
+        - "traefik.http.routers.{{ project_name }}-wordpress.tls.certresolver=letsencrypt"
+        {% endif %}
+        - "traefik.http.routers.{{ project_name }}-wordpress.middlewares=wordpress-headers"
+        # HTTP to HTTPS redirect
+        {% if traefik.domain %}
+        - "traefik.http.routers.{{ project_name }}-wordpress-http.rule=Host(`{{ traefik.domain }}`)"
+        {% elif traefik.subdomain %}
+        - "traefik.http.routers.{{ project_name }}-wordpress-http.rule=Host(`{{ traefik.subdomain }}.{{ default_domain }}`)"
+        {% endif %}
+        - "traefik.http.routers.{{ project_name }}-wordpress-http.entrypoints=web"
+        - "traefik.http.routers.{{ project_name }}-wordpress-http.middlewares=https-redirect"
+      {% endif %}
     
     mysql:
       image: mysql:8.0
@@ -87,3 +148,7 @@ compose:
   networks:
     wordpress_network:
       driver: bridge
+    {% if traefik.enabled %}
+    blastdock-network:
+      external: true
+    {% endif %}
