--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,17 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "blastdock"
-version = "1.2.1"
+dynamic = ["version"]
 authors = [
     {name = "BlastDock Team", email = "info@blastdock.com"},
 ]
 description = "Docker Deployment CLI Tool - Simplify Docker application deployment"
 readme = "README.md"
-license = {text = "MIT"}
+license = "MIT"
 requires-python = ">=3.8"
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
@@ -67,6 +66,9 @@ blastdock = "blastdock.main_cli:main"
 [tool.setuptools]
 packages = {find = {}}
 include-package-data = true
+
+[tool.setuptools.dynamic]
+version = {attr = "blastdock._version.__version__"}
 
 [tool.setuptools.package-data]
 blastdock = ["templates/*.yml", "templates/*.yaml", "templates/**/*.yml", "templates/**/*.yaml"]
